--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<!-- id is an attribute to name a tag uniquely -->
 			<section class="text-center mt-5" id="landing">
 				<h1>Full Stack Developer</h1>
-				<p>Hi My name is Rachelle ans I love building things from scratch.</p>
+				<p>Hi My name is Rachelle and I love building things from scratch.</p>
 				<img src="images/cutepuppy.jpg" class="img-fluid" id="profile">
 				<a href="mailto:rasevilla029@gmail.com" class="btn btn-danger btn-lg mt-3">Let's Work Together</a>
 			</section>
